# pycarplay

./: .gitignore  CREDITS.md  INSTALL.md  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  audio_config.py  audio_player.py  carplay_node.py  dongle_driver.py  main.py  main.qml  media_logger.py  messages.py  microphone.py  pyproject.toml  requirements.txt  sendable.py  setup.py  video_decoder.py  video_provider.py
docs/: QUICKSTART.md  README.md  USB_GUIDE.md  VERIFICATION.md  VIDEO_SETUP.md
examples/: basic_usage.py  custom_config.py  embedded_widget.py  hardware_buttons.py
src/: __init__.py
src/audio/: audio_player.py  microphone.py
src/core/: __init__.py  carplay_node.py  dongle_driver.py
src/protocol/: messages.py  sendable.py
src/pycarplay/: __init__.py  config.py  controller.py  version.py  widget.py
src/pycarplay/audio/: __init__.py  audio_player.py  audio_player_queue_backup.py  microphone.py
src/pycarplay/core/: carplay_node.py  dongle_driver.py  media_logger.py
src/pycarplay/protocol/: __init__.py  sendable.py
src/pycarplay/ui/components/: CarPlaySettings.qml  CarPlayVideo.qml  qmldir
src/pycarplay/ui/default/: Main.qml
src/pycarplay/video/: __init__.py  video_decoder.py  video_provider.py
src/ui/: __init__.py  main.qml
src/video/: video_decoder.py  video_provider.py
tests/: example.py  test_messages.py
